--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -42,7 +42,7 @@ section {
     margin-bottom: 75px;
     text-transform: none;
 
-    width: 680px;
+    max-width: 680px;
     margin: 50px auto 100px auto;
     font-style: normal;
     font-family: sans-serif;
